Fix problem with refresh-button (didn't work when displaying all articles for a category)